update: detail
