# pkg/docs/swagger.json
@@ -67,8 +67,29 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/pkg.CreateTaskReq"
+                            "$ref": "#/definitions/pkg.TaskCreateReq"
                         }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/task/{id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Akun"
+                ],
+                "summary": "Detail akun",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {}
@@ -76,7 +97,7 @@
         }
     },
     "definitions": {
-        "pkg.CreateTaskReq": {
+        "pkg.TaskCreateReq": {
             "type": "object",
             "properties": {
                 "detail": {
